--- a/.gitignore
+++ b/.gitignore
@@ -1,254 +1,175 @@
-import { Fragment, useState } from 'react';
+'use client';
 
-import { Button } from '@snb/ds-button';
-import Image from 'next/image';
+import { useState } from 'react';
+import { useForm, FormProvider, useFormContext } from 'react-hook-form';
+import { IData } from '@/store/types';
+import { Tabs, TabsContent, TabsList, TabsTrigger } from '@/components/Tabs';
+import FormFactory from './FormFactory';
+import { Email } from "@snb/ds-email";
+import Buttons from './Buttons';
+import { ProgressAlert } from '@snb/ds-progress-alert';
+import { DataDisplay } from "@snb/ds-data-display";
+import  { RadioButton }  from "@snb/ds-radio-button"
+import { tranformBackEntriesOnValues } from '@/utils';
 
-import ApproveIcon from "@/assets/svg/check-white.svg";
-import CloseIcon from "@/assets/svg/close-color.svg";
-import EditIcon from "@/assets/svg/edit.svg";
-import PrintIcon from "@/assets/svg/print-color.svg";
-import ReturnIcon from "@/assets/svg/send-back-color.svg";
 
-import { queryClient } from '@/providers';
-import { useDocumentStore } from '@/store/documentsStore';
-import { CircularProgress } from '@mui/material';
-import { TextArea } from '@snb/ds-text-area';
-import { useParams } from 'next/navigation';
-import GenericModal from './GenericModal';
+const DomesticInternacionalTab = (data: IData) => {
+  const { watch, setValue } = useFormContext();
 
-const IconMap: { [key: string]: string } = {
-  submitButton: "",
-  editButton: EditIcon,
-  printButton: PrintIcon,
-  cancelButton: CloseIcon,
-  returnButton: ReturnIcon,
-  approveButton: ApproveIcon,
+  const selectedBank = watch('bank') || '';
+
+  if (!data.requestId) {
+    return null;
+  }
+
+  return (
+    <TabsContent value="processing-bank-of-america" className="data-[state=inactive]:hidden">
+      <div className="grid grid-cols-2 gap-8 p-6">
+        <div>
+          {data.messageCutoffTime && (
+            <ProgressAlert
+              isLayoutInLine={true}
+              cardColor='Yellow'
+              height='56px'
+              cardIcon='WarningCircle'
+            >
+              {data.messageCutoffTime}
+            </ProgressAlert>
+          )}
+
+          <h1 className='my-6 text-[#484A55] font-Figtree text-lg font-semibold leading-5 tracking-tighter'>
+            Select Bank
+          </h1>
+
+          <div className="flex flex-grow gap-4">
+            <div className='flex items-center w-1/3 space-x-2 px-4 py-6 border border-[#D9D9D9] rounded-md flex-grow'>
+              <RadioButton
+
+                name="bank"
+
+                onChange={(newValue) => setValue('bank', newValue)}
+
+                styleType="normal"
+              >
+                <label className="text-[#484A55] font-Figtree text-lg font-semibold leading-5 tracking-tighter">
+                  Payplus
+                </label>
+              </RadioButton>
+
+              <div className='bg-[#008056] text-white font-Figtree text-xs font-semibold py-1 px-2 ml-4 rounded-full'>
+                Default
+              </div>
+            </div>
+
+            <div className='flex items-center w-1/3 space-x-2 px-4 py-6 border border-[#D9D9D9] rounded-md flex-grow'>
+              <RadioButton
+                value={selectedBank}
+                name="bank"
+                onChange={(newValue) => setValue('bank', newValue)}
+                styleType="normal"
+              >
+                <label className="text-[#484A55] font-Figtree text-lg font-semibold leading-5 tracking-tighter">
+                  Bank of America
+                </label>
+              </RadioButton>
+
+              <div className='bg-[#C75300] text-white font-Figtree text-xs font-semibold py-1 px-2 ml-4 rounded-full'>
+                Contingency
+              </div>
+            </div>
+          </div>
+
+          <div className='mt-10'>
+            {data.processIntegration && data.processIntegration.length > 0 && (
+              <DataDisplay
+                title='Process Integration: Bank of America'
+                data={[{
+                  Id: "320923457#-983242|239",
+                  Status: "processed",
+                  Date: "2025-11-01T11:49:30.2098749-05:00"
+                }]}
+              />
+            )}
+          </div>
+        </div>
+
+        <div>
+          <Email
+            senderName={""}
+            subjectName={""}
+            attachments={[]}
+            message={""}
+          />
+        </div>
+      </div>
+
+      <Buttons
+        requestId={data.requestId}
+        initialRequestData={data}
+        data={data.buttons}
+      />
+    </TabsContent>
+  );
 };
 
-type ButtonModalProps = {
-  loading: boolean;
-  button: any;
-  onSubmit: (button: any, text: any, bindButton: any) => Promise<void>;
+
+const ForeignCurrenciesTab = (data: IData) => {
+  return (
+    <TabsContent value="processing-bank-of-america" className="data-[state=inactive]:hidden">
+    </TabsContent>
+  );
 };
 
-export default function ButtonModal({ loading, button, onSubmit }: ButtonModalProps) {
-  const data: any = queryClient.getQueryData(["getRequest"]);
 
-  const [text, setText] = useState("");
-  const [openModal, setOpenModal] = useState(false);
+/**
+ * TabsFactory principal que decide qual aba renderizar
+ * e fornece o FormProvider.
+ */
+export default function TabsFactory({ data }: { data: IData }) {
+  const [selectedTab, setSelectedTab] = useState('wire-transfer-form');
 
-  const { documentList } = useDocumentStore((state) => state);
-  const { requestId } = useParams();
+  // Monta o form:
+  const useFormObject = useForm({
+    defaultValues: {
+      ...tranformBackEntriesOnValues(data.backEntries),
+      // Você pode iniciar o "bank" com algo (payplus ou bank-of-america) se quiser
+      bank: ''
+    },
+  });
 
-  const getDocuments = () => {
-    return documentList.length > 0
-      ? documentList.map((document) => ({
-          documentName: document.documentName,
-          documentUUID: document.documentUUID,
-          uploadedBy: {
-            fullName: document.uploadedBy.fullName,
-            userId: document.uploadedBy.userId,
-          },
-          createdAt: document.createdAt,
-        }))
-      : [];
-  };
+  if (!data) return null;
 
-  /**
-   * Aqui definimos as configs de cada botão que abre modal.
-   * Se surgir um novo "button.name" no futuro, precisamos adicioná-lo aqui,
-   * ou teremos um fallback.
-   */
-  const buttonLiterals: Record<string, Record<string, any>> = {
-    saveButton: {
-      title: '',
-      subtitle: 'Do you want to save your progress to continue later?',
-      submit: 'Save',
-      cancel: 'Cancel',
-      hasTextArea: false,
-      route: '',
-      payload: {
-        ...data,
-        documents: getDocuments(),
-      },
-    },
-    savereturnButtonButton: {
-      title: 'Do you want to save your progress to continue later?',
-      subtitle: '',
-      label: '',
-      submit: 'Save',
-      cancel: 'Cancel',
-      hasTextArea: false,
-      route: '',
-      payload: {
-        ...data,
-        documents: getDocuments(),
-      },
-    },
-    returnButton: {
-      title: 'Comment to the Initiator',
-      subtitle: '',
-      label: 'Comment:',
-      submit: 'Submit',
-      cancel: 'Cancel',
-      hasTextArea: true,
-      route: '/approve-request/success',
-      payload: {
-        ...data,
-        documents: getDocuments(),
-      },
-    },
-    returnClarificationButton: {
-      title: 'Comment to the Initiator',
-      subtitle: '',
-      label: 'Comment:',
-      submit: 'Submit',
-      cancel: 'Cancel',
-      hasTextArea: true,
-      route: '/approve-request/success',
-      payload: {
-        ...data,
-        documents: getDocuments(),
-      },
-    },
-    cancelButton: {
-      title: 'Cancel Request Reason',
-      subtitle: '',
-      label: 'Please provide information to support your decision.',
-      submit: 'Submit',
-      cancel: 'Cancel',
-      hasTextArea: true,
-      route: '/approve-request/canceled',
-      payload: {
-        ...data,
-        documents: getDocuments(),
-      },
-    },
-    // Exemplo adicional, caso precise de algo para "submitButton":
-    submitButton: {
-      title: 'Submit Request',
-      subtitle: 'Are you sure you want to proceed?',
-      label: '',
-      submit: 'Submit',
-      cancel: 'Cancel',
-      hasTextArea: false,
-      route: '/approve-request/success',
-      payload: {
-        ...data,
-        documents: getDocuments(),
-      },
-    },
-  };
+  // Lê o transfer type do backEntries
+  const transferType = data.backEntries['transfer-type']?.value;
 
-  // Se button.name não estiver em buttonLiterals, bindButton fica undefined.
-  // Podemos criar um fallback vazio ou com texto genérico:
-  const bindButton = buttonLiterals[button.name] || {
-    title: 'Confirmation',
-    subtitle: '',
-    label: '',
-    submit: 'Ok',
-    cancel: 'Cancel',
-    hasTextArea: false,
-    route: '/',
-    payload: { ...data },
+  // Deixa pronto para trocar a aba certa:
+  const TranferTypeTabs = {
+    'usd-domestic': <DomesticInternacionalTab {...data} />,
+    'usd-internacional': <DomesticInternacionalTab {...data} />,
+    'foreign-currencies': <ForeignCurrenciesTab {...data} />,
   };
 
   return (
-    <Fragment>
-      {/* BOTÃO QUE ABRE O MODAL */}
-      <Button
-        id={`button-${button.name}`}
-        data-test={`button-${button.name}`}
-        size="lg"
-        iconSize={15}
-        icon={IconMap[button.name]}
-        variant={button.theme as "text" | "primary" | "outline" | undefined}
-        onClick={() => {
-          setOpenModal(true);
-        }}
-      >
-        {button.label}
-      </Button>
+    <Tabs className="min-h-screen w-full p-6">
+      <TabsList className='m-0 p-0 pb-4 w-1/2 list-none border-b border-[#DBDBDB] rounded-none justify-start'>
+        <TabsTrigger value="wire-transfer-form" className={`p-4 font-body font-Figtree text-base font-normal tracking-tighter underline-from-font decoration-skip-ink-none ${selectedTab === 'wire-transfer-form' ? 'border-b-2 border-blue-500' : ''}`} style={{ color: 'var(--text-light-text-secondary, #636574)' }} onClick={() => setSelectedTab('wire-transfer-form')}>
+          Wire Transfer Form
+        </TabsTrigger>
 
-      {/* MODAL DE CONFIRMAÇÃO */}
-      <GenericModal open={openModal} onClose={() => {}}>
-        <div className='absolute top-1/2 left-1/2 bg-white min-w-[500px] p-[20px] rounded-lg -translate-x-1/2 -translate-y-1/2 shadow-lg shadow-[rgba(37,37,39,0.08)] focus:outline-none focus:border-e-[1px] focus:shadow-[rgba(5,145,255,0.1)]'>
-          <div className='flex justify-between items-center'>
-            {/* TÍTULO */}
-            <p className='flex justify-center font-figtree font-semibold text-lg leading-7 align-middle text-center tracking-normal text-[#1e2347]'>
-              {bindButton.title}
-            </p>
+        <TabsTrigger value="processing-bank-of-america" className={`p-4 font-body font-Figtree text-base font-normal tracking-tighter underline-from-font decoration-skip-ink-none ${selectedTab === 'processing-bank-of-america' ? 'border-b-2 border-blue-500' : ''}`} style={{ color: 'var(--text-light-text-secondary, #636574)' }} onClick={() => setSelectedTab('processing-bank-of-america')}>
+          {transferType === 'usd-domestic' || transferType === 'usd-internacional' ? 'Processing' : 'Processing: Bank of America'}
+        </TabsTrigger>
+      </TabsList>
 
-            {/* BOTÃO DE CLOSE */}
-            <button
-              disabled={loading}
-              onClick={() => setOpenModal(false)}
-              className='font-Figtree flex align-middle text-center justify-center bg-none border-none m-0 p-0 cursor-pointer focus:shadow-[0_0_0_2px_#4289f5]'
-            >
-              <Image src={CloseIcon} width={24} height={24} alt='close-icon' />
-            </button>
-          </div>
+      {/* ABA 1 */}
+      <TabsContent forceMount={true} value="wire-transfer-form" className="data-[state=inactive]:hidden">
+        <FormFactory data={data} />
+      </TabsContent>
 
-          <div className='flex gap-4 flex-col'>
-            {/* SUBTÍTULO */}
-            {bindButton.subtitle && (
-              <div className='flex gap-3 flex-col pt-5 pb-5'>
-                <p className='flex justify-center font-figtree font-semibold text-lg leading-7 align-middle text-center tracking-normal text-[#1e2347]'>
-                  {bindButton.subtitle}
-                </p>
-              </div>
-            )}
-
-            {/* TEXTAREA OPCIONAL */}
-            {bindButton.hasTextArea && (
-              <TextArea
-                id='submitModalTextArea'
-                maxLength={500}
-                enableDigitalCount={true}
-                label={bindButton.label}
-                onChangeText={(e) => setText(e)}
-              />
-            )}
-
-            {/* BOTÕES */}
-            <div className='flex gap-3 justify-between'>
-              {/* CANCEL */}
-              <Button
-                disabled={loading}
-                id='cancelButtonModal'
-                data-test={`button-${button.name}`}
-                variant='text'
-                width='140px'
-                onClick={() => setOpenModal(false)}
-              >
-                {bindButton.cancel}
-              </Button>
-
-              {/* SUBMIT */}
-              <Button
-                disabled={loading}
-                id='submitButtonModal'
-                data-test={`button-${button.name}`}
-                variant='primary'
-                width='140px'
-                onClick={() => {
-                  onSubmit(button, text, bindButton).finally(() =>
-                    setOpenModal(false)
-                  );
-                }}
-              >
-                {loading ? (
-                  <div className='flex justify-center items-center'>
-                    <CircularProgress size={20} color='inherit' />
-                  </div>
-                ) : (
-                  bindButton.submit
-                )}
-              </Button>
-            </div>
-          </div>
-        </div>
-      </GenericModal>
-    </Fragment>
+      {/* ABA 2 - Envolvemos em <FormProvider> para que o Hook Form seja válido */}
+      <FormProvider {...useFormObject}>
+        {transferType && TranferTypeTabs[transferType as keyof typeof TranferTypeTabs]}
+      </FormProvider>
+    </Tabs>
   );
 }
