--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,13 @@
-'use client';
-
-import { useState } from 'react';
-import { useForm, FormProvider, useFormContext } from 'react-hook-form';
-import { IData } from '@/store/types';
-import { Tabs, TabsContent, TabsList, TabsTrigger } from '@/components/Tabs';
-import FormFactory from './FormFactory';
-import { Email } from "@snb/ds-email";
-import Buttons from './Buttons';
-import { ProgressAlert } from '@snb/ds-progress-alert';
-import { DataDisplay } from "@snb/ds-data-display";
-import  { RadioButton }  from "@snb/ds-radio-button"
-import { tranformBackEntriesOnValues } from '@/utils';
-
-
 const DomesticInternacionalTab = (data: IData) => {
   const { watch, setValue } = useFormContext();
 
+  // Observa o campo "bank" do form:
   const selectedBank = watch('bank') || '';
 
-  if (!data.requestId) {
-    return null;
-  }
+  // Só para debug, exibe no console:
+  console.log('Banco selecionado:', selectedBank);
+
+  if (!data.requestId) return null;
 
   return (
     <TabsContent value="processing-bank-of-america" className="data-[state=inactive]:hidden">
@@ -42,13 +29,18 @@ const DomesticInternacionalTab = (data: IData) => {
           </h1>
 
           <div className="flex flex-grow gap-4">
+            {/* ================= PAYPLUS ================= */}
             <div className='flex items-center w-1/3 space-x-2 px-4 py-6 border border-[#D9D9D9] rounded-md flex-grow'>
               <RadioButton
-
                 name="bank"
-
-                onChange={(newValue) => setValue('bank', newValue)}
-
+                value="payplus"
+                // Para marcar o radio quando "bank" === "payplus"
+                checked={selectedBank === 'payplus'}
+                // Quando o usuário clica, atualiza o form
+                onChange={(newValue) => {
+                  console.log('Clicou em Payplus, valor:', newValue);
+                  setValue('bank', newValue);
+                }}
                 styleType="normal"
               >
                 <label className="text-[#484A55] font-Figtree text-lg font-semibold leading-5 tracking-tighter">
@@ -61,11 +53,17 @@ const DomesticInternacionalTab = (data: IData) => {
               </div>
             </div>
 
+            {/* =========== BANK OF AMERICA =========== */}
             <div className='flex items-center w-1/3 space-x-2 px-4 py-6 border border-[#D9D9D9] rounded-md flex-grow'>
               <RadioButton
-                value={selectedBank}
                 name="bank"
-                onChange={(newValue) => setValue('bank', newValue)}
+                value="bank-of-america"
+                // Para marcar o radio quando "bank" === "bank-of-america"
+                checked={selectedBank === 'bank-of-america'}
+                onChange={(newValue) => {
+                  console.log('Clicou em Bank of America, valor:', newValue);
+                  setValue('bank', newValue);
+                }}
                 styleType="normal"
               >
                 <label className="text-[#484A55] font-Figtree text-lg font-semibold leading-5 tracking-tighter">
@@ -79,27 +77,29 @@ const DomesticInternacionalTab = (data: IData) => {
             </div>
           </div>
 
+          {/* Exibição na tela do valor selecionado (apenas para debug visual) */}
+          <div className='mt-4 text-sm text-gray-700'>
+            Selected Bank: <strong>{selectedBank || 'Nenhum selecionado'}</strong>
+          </div>
+
           <div className='mt-10'>
             {data.processIntegration && data.processIntegration.length > 0 && (
               <DataDisplay
                 title='Process Integration: Bank of America'
-                data={[{
-                  Id: "320923457#-983242|239",
-                  Status: "processed",
-                  Date: "2025-11-01T11:49:30.2098749-05:00"
-                }]}
+                data={[
+                  {
+                    Id: "320923457#-983242|239",
+                    Status: "processed",
+                    Date: "2025-11-01T11:49:30.2098749-05:00"
+                  }
+                ]}
               />
             )}
           </div>
         </div>
 
         <div>
-          <Email
-            senderName={""}
-            subjectName={""}
-            attachments={[]}
-            message={""}
-          />
+          <Email senderName={""} subjectName={""} attachments={[]} message={""} />
         </div>
       </div>
 
@@ -111,65 +111,3 @@ const DomesticInternacionalTab = (data: IData) => {
     </TabsContent>
   );
 };
-
-
-const ForeignCurrenciesTab = (data: IData) => {
-  return (
-    <TabsContent value="processing-bank-of-america" className="data-[state=inactive]:hidden">
-    </TabsContent>
-  );
-};
-
-
-/**
- * TabsFactory principal que decide qual aba renderizar
- * e fornece o FormProvider.
- */
-export default function TabsFactory({ data }: { data: IData }) {
-  const [selectedTab, setSelectedTab] = useState('wire-transfer-form');
-
-  // Monta o form:
-  const useFormObject = useForm({
-    defaultValues: {
-      ...tranformBackEntriesOnValues(data.backEntries),
-      // Você pode iniciar o "bank" com algo (payplus ou bank-of-america) se quiser
-      bank: ''
-    },
-  });
-
-  if (!data) return null;
-
-  // Lê o transfer type do backEntries
-  const transferType = data.backEntries['transfer-type']?.value;
-
-  // Deixa pronto para trocar a aba certa:
-  const TranferTypeTabs = {
-    'usd-domestic': <DomesticInternacionalTab {...data} />,
-    'usd-internacional': <DomesticInternacionalTab {...data} />,
-    'foreign-currencies': <ForeignCurrenciesTab {...data} />,
-  };
-
-  return (
-    <Tabs className="min-h-screen w-full p-6">
-      <TabsList className='m-0 p-0 pb-4 w-1/2 list-none border-b border-[#DBDBDB] rounded-none justify-start'>
-        <TabsTrigger value="wire-transfer-form" className={`p-4 font-body font-Figtree text-base font-normal tracking-tighter underline-from-font decoration-skip-ink-none ${selectedTab === 'wire-transfer-form' ? 'border-b-2 border-blue-500' : ''}`} style={{ color: 'var(--text-light-text-secondary, #636574)' }} onClick={() => setSelectedTab('wire-transfer-form')}>
-          Wire Transfer Form
-        </TabsTrigger>
-
-        <TabsTrigger value="processing-bank-of-america" className={`p-4 font-body font-Figtree text-base font-normal tracking-tighter underline-from-font decoration-skip-ink-none ${selectedTab === 'processing-bank-of-america' ? 'border-b-2 border-blue-500' : ''}`} style={{ color: 'var(--text-light-text-secondary, #636574)' }} onClick={() => setSelectedTab('processing-bank-of-america')}>
-          {transferType === 'usd-domestic' || transferType === 'usd-internacional' ? 'Processing' : 'Processing: Bank of America'}
-        </TabsTrigger>
-      </TabsList>
-
-      {/* ABA 1 */}
-      <TabsContent forceMount={true} value="wire-transfer-form" className="data-[state=inactive]:hidden">
-        <FormFactory data={data} />
-      </TabsContent>
-
-      {/* ABA 2 - Envolvemos em <FormProvider> para que o Hook Form seja válido */}
-      <FormProvider {...useFormObject}>
-        {transferType && TranferTypeTabs[transferType as keyof typeof TranferTypeTabs]}
-      </FormProvider>
-    </Tabs>
-  );
-}
