--- a/.gitignore
+++ b/.gitignore
@@ -1,113 +1,60 @@
-const DomesticInternacionalTab = (data: IData) => {
-  const { watch, setValue } = useFormContext();
+import React from 'react';
 
-  // Observa o campo "bank" do form:
-  const selectedBank = watch('bank') || '';
+interface CustomRadioButtonProps {
+  /** Identificador de grupo (mesmo name = pertencem ao mesmo grupo) */
+  name: string;
+  /** Valor que este radio representa */
+  value: string;
+  /** Se este radio está marcado */
+  checked?: boolean;
+  /** Desabilita a interação do usuário */
+  disabled?: boolean;
+  /** Handler chamado quando o usuário seleciona este radio */
+  onChange?: (value: string) => void;
+  /** Conteúdo que aparece ao lado do radio (pode ser texto ou outro JSX) */
+  children?: React.ReactNode;
+  /** Classe extra para estilização */
+  className?: string;
+}
 
-  // Só para debug, exibe no console:
-  console.log('Banco selecionado:', selectedBank);
+const CustomRadioButton: React.FC<CustomRadioButtonProps> = ({
+  name,
+  value,
+  checked = false,
+  disabled = false,
+  onChange,
+  children,
+  className,
+}) => {
 
-  if (!data.requestId) return null;
+  // Dispara o onChange passando o value
+  const handleChange = (event: React.ChangeEvent<HTMLInputElement>) => {
+    if (onChange) {
+      onChange(event.target.value);
+    }
+  };
 
   return (
-    <TabsContent value="processing-bank-of-america" className="data-[state=inactive]:hidden">
-      <div className="grid grid-cols-2 gap-8 p-6">
-        <div>
-          {data.messageCutoffTime && (
-            <ProgressAlert
-              isLayoutInLine={true}
-              cardColor='Yellow'
-              height='56px'
-              cardIcon='WarningCircle'
-            >
-              {data.messageCutoffTime}
-            </ProgressAlert>
-          )}
-
-          <h1 className='my-6 text-[#484A55] font-Figtree text-lg font-semibold leading-5 tracking-tighter'>
-            Select Bank
-          </h1>
-
-          <div className="flex flex-grow gap-4">
-            {/* ================= PAYPLUS ================= */}
-            <div className='flex items-center w-1/3 space-x-2 px-4 py-6 border border-[#D9D9D9] rounded-md flex-grow'>
-              <RadioButton
-                name="bank"
-                value="payplus"
-                // Para marcar o radio quando "bank" === "payplus"
-                checked={selectedBank === 'payplus'}
-                // Quando o usuário clica, atualiza o form
-                onChange={(newValue) => {
-                  console.log('Clicou em Payplus, valor:', newValue);
-                  setValue('bank', newValue);
-                }}
-                styleType="normal"
-              >
-                <label className="text-[#484A55] font-Figtree text-lg font-semibold leading-5 tracking-tighter">
-                  Payplus
-                </label>
-              </RadioButton>
-
-              <div className='bg-[#008056] text-white font-Figtree text-xs font-semibold py-1 px-2 ml-4 rounded-full'>
-                Default
-              </div>
-            </div>
-
-            {/* =========== BANK OF AMERICA =========== */}
-            <div className='flex items-center w-1/3 space-x-2 px-4 py-6 border border-[#D9D9D9] rounded-md flex-grow'>
-              <RadioButton
-                name="bank"
-                value="bank-of-america"
-                // Para marcar o radio quando "bank" === "bank-of-america"
-                checked={selectedBank === 'bank-of-america'}
-                onChange={(newValue) => {
-                  console.log('Clicou em Bank of America, valor:', newValue);
-                  setValue('bank', newValue);
-                }}
-                styleType="normal"
-              >
-                <label className="text-[#484A55] font-Figtree text-lg font-semibold leading-5 tracking-tighter">
-                  Bank of America
-                </label>
-              </RadioButton>
-
-              <div className='bg-[#C75300] text-white font-Figtree text-xs font-semibold py-1 px-2 ml-4 rounded-full'>
-                Contingency
-              </div>
-            </div>
-          </div>
-
-          {/* Exibição na tela do valor selecionado (apenas para debug visual) */}
-          <div className='mt-4 text-sm text-gray-700'>
-            Selected Bank: <strong>{selectedBank || 'Nenhum selecionado'}</strong>
-          </div>
-
-          <div className='mt-10'>
-            {data.processIntegration && data.processIntegration.length > 0 && (
-              <DataDisplay
-                title='Process Integration: Bank of America'
-                data={[
-                  {
-                    Id: "320923457#-983242|239",
-                    Status: "processed",
-                    Date: "2025-11-01T11:49:30.2098749-05:00"
-                  }
-                ]}
-              />
-            )}
-          </div>
-        </div>
-
-        <div>
-          <Email senderName={""} subjectName={""} attachments={[]} message={""} />
-        </div>
-      </div>
-
-      <Buttons
-        requestId={data.requestId}
-        initialRequestData={data}
-        data={data.buttons}
+    <label
+      className={className}
+      style={{
+        display: 'inline-flex',
+        alignItems: 'center',
+        cursor: disabled ? 'not-allowed' : 'pointer',
+      }}
+    >
+      <input
+        type="radio"
+        name={name}
+        value={value}
+        disabled={disabled}
+        checked={checked}
+        onChange={handleChange}
+        style={{ marginRight: '0.5rem' }}
       />
-    </TabsContent>
+      {children}
+    </label>
   );
 };
+
+export default CustomRadioButton;
